--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,23 +9,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<nav class="navbar navbar-inverse">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a class="navbar-brand" th:href="@{/}">Home Page</a>
-		</div>
-		<ul class="nav navbar-nav">
-			<li><a th:href="@{/results}">Results</a></li>
-			<li><a th:href="@{/customers}" sec:authorize="hasAuthority('OFFICE_WORKER')">Klienci</a></li>
-			<li><a th:href="@{/employees(type='MECHANIC')}" sec:authorize="hasAuthority('OWNER')">Pracownicy</a></li>
-		</ul>
-		<ul class="nav navbar-nav navbar-right">
-			<li><a th:href="@{/registration}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-			<li sec:authorize="isAnonymous()"><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-			<li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-		</ul>
-	</div>
-</nav>
+<div th:replace="common/header :: header"> </div>
 
 
 <div sec:authorize="isAuthenticated()">
@@ -82,36 +66,5 @@ Authenticated user roles:
 
 
 
-
-
-<!--&lt;!&ndash; jQuery &ndash;&gt;-->
-<!--<script src="../../vendor/jquery/jquery.min.js"></script>-->
-
-<!--&lt;!&ndash; Bootstrap Core JavaScript &ndash;&gt;-->
-<!--<script src="../../vendor/bootstrap/js/bootstrap.min.js"></script>-->
-
-<!--&lt;!&ndash; Metis Menu Plugin JavaScript &ndash;&gt;-->
-<!--<script src="../../vendor/metisMenu/metisMenu.min.js"></script>-->
-
-<!--&lt;!&ndash; DataTables JavaScripta &ndash;&gt;-->
-<!--<script src="../../vendor/datatables/js/jquery.dataTables.min.js"></script>-->
-<!--<script-->
-		<!--src="../../vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>-->
-<!--<script-->
-		<!--src="../../vendor/datatables-responsive/dataTables.responsive.js"></script>-->
-
-<!--&lt;!&ndash; Custom Theme JavaScript &ndash;&gt;-->
-<!--<script src="../../dist/js/sb-admin-2.js"></script>-->
-
-
-
-<!-- Page-Level Demo Scripts - Tables - Use for reference -->
-<!--<script>-->
-	<!--$(document).ready(function() {-->
-		<!--$('#dataTables-example').DataTable({-->
-			<!--responsive : true-->
-		<!--});-->
-	<!--});-->
-<!--</script>-->
 </body>
 </html>
