--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -20,23 +20,23 @@
                   th:object="${user}" method="post" class="form-horizontal"
                   role="form">
                 <h2>Registration Form</h2>
-                <!--<div class="form-group">-->
-                    <!--<div class="col-sm-9">-->
-                        <!--<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"-->
-                               <!--class="validation-message"></label>-->
-                        <!--<input type="text" th:field="*{name}" placeholder="Name"-->
-                               <!--class="form-control" />-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="form-group">
+                    <div class="col-sm-9">
+                        <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
+                               class="validation-message"></label>
+                        <input type="text" th:field="*{firstName}" placeholder="First Name"
+                               class="form-control" />
+                    </div>
+                </div>
 
-                <!--<div class="form-group">-->
-                    <!--<div class="col-sm-9">-->
-                        <!--<label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"-->
-                                  <!--class="validation-message"></label>-->
-                        <!--<input type="text" th:field="*{lastName}"-->
-                               <!--placeholder="Last Name" class="form-control" />-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="form-group">
+                    <div class="col-sm-9">
+                        <label	th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"
+                                  class="validation-message"></label>
+                        <input type="text" th:field="*{lastName}"
+                               placeholder="Last Name" class="form-control" />
+                    </div>
+                </div>
                 <div class="form-group">
                     <div class="col-sm-9">
                         <input type="text" th:field="*{email}" placeholder="Email"
