--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -20,6 +20,7 @@
 		<ul class="nav navbar-nav navbar-right">
 			<li sec:authorize="!isAuthenticated()"><a th:href="@{/registration}"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
 			<li sec:authorize="isAnonymous()"><a th:href="@{/login}"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+			<li sec:authorize="isAuthenticated()"><a th:href="@{/group/groups}">Grupy</a></li>
 			<li sec:authorize="isAuthenticated()"><a th:href="@{/profile}">Profil</a></li>
 			<li sec:authorize="isAuthenticated()"><a th:href="@{/logout}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
 		</ul>
