--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -11,124 +11,37 @@
 <body>
 <div th:replace="common/header :: header"> </div>
 <h1>aaa</h1>
-<!--<div class="container-fluid">-->
-<!--	<div class="row">-->
-<!--		<div class="col-md-3">-->
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<form autocomplete="off" action="#" th:action="@{/group}"
+				  th:object="${newTravelGroup}" method="post" class="form-horizontal"
+				  role="form">
+				<h2>Registration Form</h2>
+				<div class="form-group">
+					<div class="col-sm-9">
+						<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+							   class="validation-message"></label>
+						<input type="text" th:field="*{name}" placeholder="Name"
+							   class="form-control" />
+					</div>
+				</div>
 
-<!--			<ul class="nav nav-tabs">-->
-<!--				<li class="active"><a data-toggle="tab" href="#tab1" style="font-size: small">Mechanik</a>-->
-<!--				</li>-->
-<!--				<li><a data-toggle="tab" href="#tab2" style="font-size: small">Pracownik Biura</a>-->
-<!--				</li>-->
-<!--			</ul>-->
 
-<!--			<div id="tab-content" class="tab-content">-->
-<!--				<div id="tab1" class="tab-pane fade in active">-->
-<!--					<div>-->
-<!--						<form th:action="@{/employees/employee(type='MECHANIC')}" autocomplete="off" th:object="${createEmployeeDto}"-->
-<!--							  method="post"-->
-<!--							  class="form-horizontal" role="form">-->
-<!--							<h2>Nowy Mechanik</h2>-->
-<!--							<div class="form-group">-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{email}" placeholder="Email" class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="password" th:field="*{password}" placeholder="Password"-->
-<!--										   class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{firstName}" placeholder="Imię" class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{lastName}" placeholder="Nazwisko"-->
-<!--										   class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{pesel}" placeholder="Pesel" class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{rate}" placeholder="Stawka" class="form-control"/>-->
-<!--								</div>-->
-<!--							</div>-->
 
-<!--							<div class="form-group">-->
-<!--								<div class="col-sm-9">-->
-<!--									<button type="submit" class="btn btn-primary btn-block">Dodaj</button>-->
-<!--								</div>-->
-<!--							</div>-->
-<!--						</form>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--				<div id="tab2" class="tab-pane fade">-->
-<!--					<div>-->
-<!--						<form th:action="@{/employees/employee(type='OFFICE_WORKER')}" autocomplete="off" th:object="${createEmployeeDto}"-->
-<!--							  method="post"-->
-<!--							  class="form-horizontal" role="form">-->
-<!--							<h2>Nowy Pracownik Biura</h2>-->
-<!--							<div class="form-group">-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{email}" placeholder="Email" class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="password" th:field="*{password}" placeholder="Password"-->
-<!--										   class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{firstName}" placeholder="Imię" class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{lastName}" placeholder="Nazwisko"-->
-<!--										   class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{pesel}" placeholder="Pesel" class="form-control"/>-->
-<!--								</div>-->
-<!--								<div class="col-sm-9">-->
-<!--									<input type="text" th:field="*{rate}" placeholder="Stawka" class="form-control"/>-->
-<!--								</div>-->
-<!--							</div>-->
+				<div class="form-group">
+					<div class="col-sm-9">
+						<button type="submit" class="btn btn-primary btn-block">Register User</button>
+					</div>
+				</div>
 
-<!--							<div class="form-group">-->
-<!--								<div class="col-sm-9">-->
-<!--									<button type="submit" class="btn btn-primary btn-block">Dodaj</button>-->
-<!--								</div>-->
-<!--							</div>-->
-<!--						</form>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
+				<!--<span th:utext="${successMessage}"></span>-->
 
-<!--		</div>-->
-<!--		<div class="col-md-9">-->
-<!--			<p><a th:href="@{../employees(type='MECHANIC')}" class="btn btn-info">Mechanicy</a>-->
-<!--				<a th:href="@{../employees(type='OFFICE_WORKER')}" class="btn btn-info">Pracownicy biura</a></p>-->
-<!--			<h1>Pracownicy biura</h1>-->
-<!--			<table class="table table-striped table-bordered table-hover" id="dataTables-example">-->
-<!--				<tr class="even gradeC">-->
-<!--					<th>Email</th>-->
-<!--					<th>Imię</th>-->
-<!--					<th>Nazwisko</th>-->
-<!--					<th>Pesel</th>-->
-<!--					<th>Data zatrudnienia</th>-->
-<!--					<th>Stawka</th>-->
-<!--				</tr>-->
-<!--				<tr th:each="employee :${employees}" class="odd gradeA">-->
-<!--					<td th:text="${employee.email}"></td>-->
-<!--					<td th:text="${employee.firstName}"></td>-->
-<!--					<td th:text="${employee.lastName}"></td>-->
-<!--					<td th:text="${employee.pesel}"></td>-->
-<!--					<td th:text="${employee.hireDate}"></td>-->
-<!--					<td th:text="${employee.rate}"></td>-->
-<!--				</tr>-->
-<!--			</table>-->
-<!--			<form th:action="@{/}" method="get">-->
-<!--				<button class="btn btn-primary" type="Submit">Home Page</button>-->
-<!--			</form>-->
 
-<!--		</div>-->
-<!--	</div>-->
-<!--</div>-->
+			</form>
+		</div>
+	</div>
+</div>
 
 
 </body>
