--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -4,25 +4,49 @@
 <head>
 	<title>Registration Form</title>
 	<!--<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+	<!-- jQuery library -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+	<!-- Popper JS -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+	<!-- Latest compiled JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div th:replace="common/header :: header"> </div>
-<h1>aaa</h1>
 <div class="container">
 	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
+        <div class="col-sm-8">
+			<h3>Moje Grupy</h3>
+			<table class="table table-striped table-bordered table-hover" id="dataTables-example">
+				<tr class="even gradeC">
+					<th>Nazwa Grupy</th>
+					<th>Rola</th>
+				</tr>
+				<tr th:each="group :${travelGroups}" class="odd gradeA">
+					<td th:text="${group.groupName}"></td>
+					<td th:text="${group.groupRole}"></td>
+				</tr>
+			</table>
+
+        </div>
+		<div class="col-sm-4">
 			<form autocomplete="off" action="#" th:action="@{/group}"
 				  th:object="${newTravelGroup}" method="post" class="form-horizontal"
 				  role="form">
-				<h2>Registration Form</h2>
+				<h2>Nowa Grupa</h2>
 				<div class="form-group">
 					<div class="col-sm-9">
 						<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
 							   class="validation-message"></label>
-						<input type="text" th:field="*{name}" placeholder="Name"
+						<input type="text" th:field="*{name}" placeholder="Nazwa grupy"
 							   class="form-control" />
 					</div>
 				</div>
@@ -31,7 +55,7 @@
 
 				<div class="form-group">
 					<div class="col-sm-9">
-						<button type="submit" class="btn btn-primary btn-block">Register User</button>
+						<button type="submit" class="btn btn-primary btn-block">Stwórz!</button>
 					</div>
 				</div>
 
