--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -1,74 +1,113 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-	  xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Registration Form</title>
-	<!--<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />-->
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
-	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
-	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Registration Form</title>
+    <!--<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />-->
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-	<!-- Popper JS -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 
-	<!-- Latest compiled JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div th:replace="common/header :: header"> </div>
+<div th:replace="common/header :: header"></div>
 <div class="container">
-	<div class="row">
+    <div class="row">
         <div class="col-sm-8">
-			<h3>Moje Grupy</h3>
+            <h3>Moje Grupy</h3>
 
-			<table class="table">
+            <table class="table">
 
-				<tbody>
-				<tr  th:each="grp :${travelGroups}" style="font-size: x-large">
+                <tbody>
+                <tr th:each="grp :${travelGroups}" style="font-size: x-large">
 
-					<td th:text="${grp.groupName}"></td>
-					<td th:text="${grp.groupRole == 'OWNER' ? 'Organizator' : 'Uczestnik'}"></td>
-					<td><a class="btn btn-primary float-right" th:href="@{/group/details/{groupId}/members(groupId=${grp.groupId})}">Szczegóły</a></td>
-				</tr>
+                    <td th:text="${grp.groupName}"></td>
+                    <td th:text="${grp.groupRole.name() == 'OWNER' ? 'Organizator' : 'Uczestnik'}"></td>
+                    <td><a class="btn btn-primary float-right"
+                           th:href="@{/group/details/{groupId}/members(groupId=${grp.groupId})}">Szczegóły</a></td>
+                </tr>
 
-				</tbody>
-			</table>
+                </tbody>
+            </table>
 
 
         </div>
-		<div class="col-sm-4">
-			<form autocomplete="off" action="#" th:action="@{/group}"
-				  th:object="${newTravelGroup}" method="post" class="form-horizontal"
-				  role="form">
-				<h2>Nowa Grupa</h2>
-				<div class="form-group">
-					<div class="col-sm-9">
-						<label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
-							   class="validation-message"></label>
-						<input type="text" th:field="*{name}" placeholder="Nazwa grupy"
-							   class="form-control" />
-					</div>
-				</div>
+        <div class="col-sm-4">
+            <div>
+                <form autocomplete="off" action="#" th:action="@{/group}"
+                      th:object="${newTravelGroup}" method="post" class="form-horizontal"
+                      role="form">
+                    <h2>Nowa Grupa</h2>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <label th:if="${#fields.hasErrors('name')}" th:errors="*{name}"
+                                   class="validation-message"></label>
+                            <input type="text" th:field="*{name}" placeholder="Nazwa grupy"
+                                   class="form-control"/>
+                        </div>
+                    </div>
 
 
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <button type="submit" class="btn btn-primary btn-block">Stwórz!</button>
+                        </div>
+                    </div>
 
-				<div class="form-group">
-					<div class="col-sm-9">
-						<button type="submit" class="btn btn-primary btn-block">Stwórz!</button>
-					</div>
-				</div>
-
-				<!--<span th:utext="${successMessage}"></span>-->
+                    <!--<span th:utext="${successMessage}"></span>-->
 
 
-			</form>
-		</div>
-	</div>
+                </form>
+            </div>
+            <div>
+                <h3>Oczekujące zaproszenia</h3>
+                <table class="table">
+
+                    <tbody>
+                    <tr  th:each="invite :${pendingInvites}" style="font-size: small">
+
+                        <td th:text="${invite.groupName}"></td>
+                        <td th:text="${invite.invitationSourceEmail}"></td>
+                        <
+                        <td>
+                            <form autocomplete="off" action="#" th:action="@{/group/invite/status}"
+                                  th:object="${statusChangeRequest}" method="post" class="form-horizontal"
+                                  role="form">
+
+
+                                <input type="hidden" th:attr="name=id" class="form-control" th:value="${invite.id}"/>
+                                <input type="hidden" th:attr="name=status" class="form-control" th:value="${'ACCEPTED'}"/>
+
+
+                                <div class="form-group">
+                                    <div class="col-sm-9">
+                                        <button type="submit" class="btn btn-primary btn-block">Przyjmij!</button>
+                                    </div>
+                                </div>
+
+                                <!--<span th:utext="${successMessage}"></span>-->
+
+
+                            </form>
+                        </td>
+                    </tr>
+
+                    </tbody>
+                </table>
+
+            </div>
+        </div>
+    </div>
 </div>
 
 
