--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 	  xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Registration Form</title>
+	<link rel="stylesheet" th:href="@{/css/style.css}"/>
 	<!--<link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" />-->
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
 	<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
@@ -21,7 +22,7 @@
 </head>
 <body>
 <div th:replace="common/header :: header"> </div>
-
+<h1>CSS TEST</h1>
 
 <div sec:authorize="isAuthenticated()">
 	<a class="btn btn-success"th:href="@{/dashboard}">Dashboard</a>
