--- a/src/main/resources/templates/change-password.html
+++ b/src/main/resources/templates/change-password.html
@@ -19,7 +19,7 @@
             <form autocomplete="off" action="#" th:action="@{/change-password}"
                   th:object="${changePasswordDto}" method="post" class="form-horizontal"
                   role="form">
-                <h2>Registration Form</h2>
+                <h2>Change password Form</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
                         <input type="text" th:field="*{oldPassword}" placeholder="Old Password"
@@ -34,14 +34,14 @@
                         <label	th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}"
                                   class="validation-message"></label>
                         <input type="text" th:field="*{newPassword}"
-                               placeholder="Last Name" class="form-control" />
+                               placeholder="New Password" class="form-control" />
                     </div>
                 </div>
 
 
                 <div class="form-group">
                     <div class="col-sm-9">
-                        <button type="submit" class="btn btn-primary btn-block">Register User</button>
+                        <button type="submit" class="btn btn-primary btn-block">Change!</button>
                     </div>
                 </div>
 
