--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -19,7 +19,7 @@
             <form autocomplete="off" action="#" th:action="@{/registration}"
                   th:object="${userEntity}" method="post" class="form-horizontal"
                   role="form">
-                <h2>Registration Form</h2>
+                <h2>Your data</h2>
                 <div class="form-group">
                     <div class="col-sm-9">
                         <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
