--- a/src/main/resources/templates/group/groupDetailsExpenses.html
+++ b/src/main/resources/templates/group/groupDetailsExpenses.html
@@ -23,80 +23,96 @@
 
 
 <div th:replace="common/header :: header"></div>
-<h1>$$$ tu beda wydatki $$$</h1>
-<!--<div class="container">-->
-<!--    <div class="row">-->
-<!--        <h2 th:text="${groupName}"></h2>-->
-<!--    </div>-->
-<!--    <div class="row">-->
-<!--        <div>-->
-<!--            <ul class="nav nav-tabs">-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Szczegóły</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" href="#">Planowanie</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" th:href="@{/group/details/1/expenses}">Wydatki</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link" th:href="@{/group/details/1/chat}">Chat</a>-->
-<!--                </li>-->
-<!--                <li class="nav-item">-->
-<!--                    <a class="nav-link active" href="#">Uczestnicy</a>-->
-<!--                </li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--    <div class="row">-->
-<!--        <div class="col-sm-8">-->
-<!--            <h3>Członkowie</h3>-->
-<!--            <table class="table">-->
+<div class="container">
+    <div class="row">
+        <h2 th:text="${groupName}"></h2>
+    </div>
+    <div class="row">
+        <div>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Szczegóły</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Planowanie</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/group/details/1/expenses}">Wydatki</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/group/details/1/chat}">Chat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Uczestnicy</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-8">
+            <h3>Wydatki</h3>
+            <table class="table">
 
-<!--                <tbody>-->
-<!--                <tr th:each="member :${groupDetailsMembers}" style="font-size: x-large">-->
+                <tbody>
+                <tr th:each="expense :${travelGroup.expenses}" style="font-size: x-large">
 
-<!--                    <td th:text="${member.firstName + ' ' + member.lastName}"></td>-->
-<!--                    <td th:text="${member.groupRole.name() == 'OWNER' ? 'Organizator' : 'Uczestnik'}"></td>-->
+                    <td th:text="${expense.getTitle()}"></td>
+                    <td th:text="${expense.getAmount()}"></td>
 
-<!--                </tr>-->
+                </tr>
 
-<!--                </tbody>-->
-<!--            </table>-->
-<!--        </div>-->
-<!--        <div class="col-sm-4">-->
-<!--            <div>-->
-<!--                <form autocomplete="off" action="#" th:action="@{/group/invite}"-->
-<!--                      th:object="${groupInvitation}" method="post" class="form-horizontal"-->
-<!--                      role="form">-->
-<!--                    <h2>Zaproś użytkownika</h2>-->
-<!--                    <div class="form-group">-->
-<!--                        <div class="col-sm-9">-->
-<!--                            <label th:if="${#fields.hasErrors('email')}" th:errors="*{email}"-->
-<!--                                   class="validation-message"></label>-->
-<!--                            <input type="text" th:field="*{email}" placeholder="email"-->
-<!--                                   class="form-control"/>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    <input type="hidden" th:attr="name=groupId" class="form-control" th:value="${groupId}"/>-->
+                </tbody>
+            </table>
+        </div>
+        <div class="col-sm-4">
+            <div>
+                <form autocomplete="off" action="#" th:action="@{/group/expense}"
+                      th:object="${createExpenseRequest}" method="post" class="form-horizontal"
+                      role="form">
+                    <h2>Dodaj wydatek</h2>
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <label th:if="${#fields.hasErrors('title')}" th:errors="*{title}"
+                                   class="validation-message"></label>
+                            <input type="text" th:field="*{title}" placeholder="tytuł"
+                                   class="form-control"/>
+                        </div>
+                        <div class="col-sm-9">
+                            <label th:if="${#fields.hasErrors('amount')}" th:errors="*{amount}"
+                                   class="validation-message"></label>
+                            <input type="text" th:field="*{amount}" placeholder="kwota"
+                                   class="form-control"/>
+                        </div>
+                        <div class="col-sm-9">
+                            <label>uczestnicy</label>
+                            <th:block th:each="member : ${travelGroup.getMembers()}">
+                                <div th:if="${currentUserId != member.id}">
+                                    <input type="checkbox" name="debtors" th:value="${member.id}"/>
+                                    <label th:text="${member.name}"></label>
+                                </div>
+                            </th:block>
+                        </div>
+
+                    </div>
+                    <input type="hidden" th:attr="name=groupId" class="form-control" th:value="${travelGroup.id}"/>
+                    <input type="hidden" th:attr="name=authorId" class="form-control" th:value="${currentUserId}"/>
 
 
-<!--                    <div class="form-group">-->
-<!--                        <div class="col-sm-9">-->
-<!--                            <button type="submit" class="btn btn-primary btn-block">Zaproś!</button>-->
-<!--                        </div>-->
-<!--                    </div>-->
+                    <div class="form-group">
+                        <div class="col-sm-9">
+                            <button type="submit" class="btn btn-primary btn-block">Zaproś!</button>
+                        </div>
+                    </div>
 
-<!--                    &lt;!&ndash;<span th:utext="${successMessage}"></span>&ndash;&gt;-->
+                    <!--<span th:utext="${successMessage}"></span>-->
 
 
-<!--                </form>-->
-<!--            </div>-->
+                </form>
+            </div>
 
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+        </div>
+    </div>
+</div>
 
 
 </body>
