--- a/src/main/resources/templates/group/groups.html
+++ b/src/main/resources/templates/group/groups.html
@@ -56,6 +56,12 @@
                                    class="form-control"/>
                         </div>
                     </div>
+                    <div>
+                        <h3>Znajomi</h3>
+                        <div th:each="friend : ${userFriends}">
+                            <span th:text="${friend.id + ' ' + friend.firstName + ' ' + friend.lastName}"></span>
+                        </div>
+                    </div>
 
 
                     <div class="form-group">
