fixed checkbox ids

--- a/src/main/resources/templates/group/groupDetailsMembers.html
+++ b/src/main/resources/templates/group/groupDetailsMembers.html
@@ -135,195 +135,16 @@
 
                                                             <!-- Table body -->
                                                             <tbody id="members">
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
+                                                            <tr th:each="friend, index :${friends}">
+                                                                <td th:text="${friend.firstName + ' ' + friend.lastName}"></td>
                                                                 <td>
                                                                     <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
+                                                                        <input type="checkbox" class="custom-control-input" th:id="${index}">
+                                                                        <label class="custom-control-label" th:for="${index}"></label>
                                                                     </div>
                                                                 </td>
                                                             </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
-                                                            <tr>
-                                                                <td>Imię Nazwisko</td>
-                                                                <td>
-                                                                    <div class="custom-control custom-checkbox">
-                                                                        <input type="checkbox" class="custom-control-input" id="1">
-                                                                        <label class="custom-control-label" for="1"></label>
-                                                                    </div>
-                                                                </td>
-                                                            </tr>
+
                                                             </tbody>
                                                             <!-- Table body -->
                                                         </table>
