--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -55,7 +55,7 @@
 				<a class="nav-link" th:href="@{/logout}">Wyloguj</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link waves-effect waves-light">1
+				<a class="nav-link waves-effect waves-light" th:href="@{/notification/invitations}">1
 					<i class="fas fa-envelope"></i>
 				</a>
 			</li>
