--- a/src/main/resources/templates/group/groupDetailsMembers.html
+++ b/src/main/resources/templates/group/groupDetailsMembers.html
@@ -34,13 +34,13 @@
                 <div class="card-header">
                     <ul class="nav nav-pills nav-justified">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Uczestnicy</a>
+                            <a class="nav-link active" th:href="@{/group/details/1/members}">Uczestnicy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Szczegóły</a>
+                            <a class="nav-link" th:href="@{/group/details/1}">Szczegóły</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Planowanie</a>
+                            <a class="nav-link" th:href="@{/group/details/1/planning}">Planowanie</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" th:href="@{/group/details/1/expenses}">Wydatki</a>
